--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -3,9 +3,16 @@
     <Version>$(BUILD_BUILDNUMBER)</Version>
     <Company>AutSoft Ltd.</Company>
     <Authors>AutSoft Ltd.</Authors>
-    <PackageIcon>../AutSoft-logo.png</PackageIcon>
+    <PackageIcon>AutSoft-logo.png</PackageIcon>
     <PackageIconUrl />
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="../AutSoft-logo.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 </Project>
