--- a/src/AutSoft.Core/AutSoft.Common.csproj
+++ b/src/AutSoft.Core/AutSoft.Common.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AutSoft.DbScaffolding.Identity\AutSoft.DbScaffolding.Identity.csproj" />
-    <ProjectReference Include="..\AutSoft.Linq\AutSoft.Linq.csproj" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
