--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -4,12 +4,19 @@
     <Company>AutSoft Ltd.</Company>
     <Authors>AutSoft Ltd.</Authors>
     <PackageIcon>AutSoft-logo.png</PackageIcon>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <PackageIconUrl />
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="../AutSoft-logo.png">
+      <Visible>False</Visible>
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="../../LICENSE.md">
+      <Visible>False</Visible>
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
