--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -18,4 +18,15 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageVersion Include="Microsoft.NET.Test.Sdk">
+      <Version>17.3.0</Version>
+    </PackageVersion>
+    <PackageVersion Include="xunit">
+      <Version>2.4.2</Version>
+    </PackageVersion>
+    <PackageVersion Include="xunit.runner.visualstudio">
+      <Version>2.4.5</Version>
+    </PackageVersion>
+  </ItemGroup>
 </Project>
