--- a/.github/workflows/AutSoftCore_CD.yml
+++ b/.github/workflows/AutSoftCore_CD.yml
@@ -35,5 +35,10 @@ jobs:
     - name: Pack
       run: dotnet pack --no-restore
       
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.0
+      with:
+        path: "**/*.nupkg"
+    
     - name: Push
       run: dotnet nuget push **/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
