--- a/.github/workflows/AutSoftCore_CD.yml
+++ b/.github/workflows/AutSoftCore_CD.yml
@@ -33,7 +33,7 @@ jobs:
       run: dotnet restore
       
     - name: Pack
-      run: dotnet pack --no-restore
+      run: dotnet pack --no-restore --configuration Release --output artifacts
       
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
