--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -19,8 +19,14 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageVersion Include="Microsoft.EntityFrameworkCore">
+      <Version>6.0.10</Version>
+    </PackageVersion>
     <PackageVersion Include="Microsoft.NET.Test.Sdk">
       <Version>17.3.0</Version>
+    </PackageVersion>
+    <PackageVersion Include="Stateless">
+      <Version>5.12.0</Version>
     </PackageVersion>
     <PackageVersion Include="xunit">
       <Version>2.4.2</Version>
