--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -1,26 +1,49 @@
 <Project>
+  
   <ItemGroup>
-    <PackageReference Include="DotNet.ReproducibleBuilds" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="6.0.0">
+    <PackageReference Include="DotNet.ReproducibleBuilds" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Roslynator.Analyzers" Version="4.1.1">
+    <PackageReference Include="Roslynator.Analyzers">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.43.0.51858">
+    <PackageReference Include="SonarAnalyzer.CSharp">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
+    <PackageReference Include="StyleCop.Analyzers">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+  
+  <ItemGroup>
+    <PackageVersion Include="DotNet.ReproducibleBuilds">
+      <Version>1.1.1</Version>
+    </PackageVersion>
+    <PackageVersion Include="Microsoft.CodeAnalysis.NetAnalyzers">
+      <Version>6.0.0</Version>
+    </PackageVersion>
+    <PackageVersion Include="Roslynator.Analyzers">
+      <Version>4.1.1</Version>
+    </PackageVersion>
+    <PackageVersion Include="SonarAnalyzer.CSharp">
+      <Version>8.43.0.51858</Version>
+    </PackageVersion>
+    <PackageVersion Include="StyleCop.Analyzers">
+      <Version>1.2.0-beta.435</Version>
+    </PackageVersion>
+  </ItemGroup>
+  
   <ItemGroup>
     <PackageVersion Include="Microsoft.EntityFrameworkCore">
-      <Version>6.0.10</Version>
+      <Version>6.0.8</Version>
+    </PackageVersion>
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions">
+      <Version>6.0.0</Version>
     </PackageVersion>
     <PackageVersion Include="Microsoft.NET.Test.Sdk">
       <Version>17.3.0</Version>
@@ -35,4 +58,5 @@
       <Version>2.4.5</Version>
     </PackageVersion>
   </ItemGroup>
+  
 </Project>
