--- a/src/AutSoft.DbScaffolding.Identity/AutSoft.DbScaffolding.Identity.csproj
+++ b/src/AutSoft.DbScaffolding.Identity/AutSoft.DbScaffolding.Identity.csproj
@@ -2,14 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
-    <PackageReference Include="EntityFrameworkCore.Scaffolding.Handlebars" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
+    <PackageReference Include="EntityFrameworkCore.Scaffolding.Handlebars" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
