--- a/src/AutSoft.All/AutSoft.All.csproj
+++ b/src/AutSoft.All/AutSoft.All.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\AutSoft.AspNetCore.Auth\AutSoft.AspNetCore.Auth.csproj" />
     <ProjectReference Include="..\AutSoft.AspNetCore.Blazor\AutSoft.AspNetCore.Blazor.csproj" />
     <ProjectReference Include="..\AutSoft.DbScaffolding.Identity\AutSoft.DbScaffolding.Identity.csproj" />
+    <ProjectReference Include="..\AutSoft.EntityFrameworkCore\AutSoft.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\AutSoft.Linq\AutSoft.Linq.csproj" />
     <ProjectReference Include="..\AutSoft.Mud.Blazor\AutSoft.Mud.Blazor.csproj" />
   </ItemGroup>
