--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -12,10 +12,11 @@
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" Version="6.0.8" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageVersion Include="Microsoft.TypeScript.Compiler" Version="3.1.5" />
     <PackageVersion Include="Microsoft.TypeScript.MSBuild" Version="4.9.4" />
     <PackageVersion Include="Stateless" Version="5.12.0" />
     <PackageVersion Include="Sve.Blazor.InfiniteScroll" Version="1.0.0-alpha" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="6.0.12" />
-    <PackageVersion Include="MudBlazor" Version="6.1.6" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="6.0.13" />
+    <PackageVersion Include="MudBlazor" Version="6.1.8" />
   </ItemGroup>
 </Project>
