Fix generated js files packaging
JS files generated by the blazor projects are not included in the staticwebassets folder in the nuget package, but in the content and contentFiles folders.

More details:
https://github.com/microsoft/TypeScript/issues/42907

--- a/pipelines/autsoft-core-packages-cd.yml
+++ b/pipelines/autsoft-core-packages-cd.yml
@@ -20,6 +20,12 @@ steps:
     configFilePath: 'pipelines/GitVersion.yml'
 
 - task: DotNetCoreCLI@2
+  displayName: 'dotnet build'
+  inputs:
+    command: build
+    projects: '$(Build.Repository.LocalPath)/src/**/*.csproj'
+
+- task: DotNetCoreCLI@2
   displayName: 'dotnet pack'
   inputs:
     command: pack
