--- a/.github/workflows/AutSoftCore_CD.yml
+++ b/.github/workflows/AutSoftCore_CD.yml
@@ -32,6 +32,9 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
       
+    - name: Build
+      run: dotnet build --no-restore --configuration Release
+
     - name: Pack
       run: dotnet pack --no-restore --configuration Release --output artifacts
       
