--- a/src/AutSoft.DbScaffolding.Identity/AutSoft.DbScaffolding.Identity.csproj
+++ b/src/AutSoft.DbScaffolding.Identity/AutSoft.DbScaffolding.Identity.csproj
@@ -1,22 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
     <PackageReference Include="EntityFrameworkCore.Scaffolding.Handlebars" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\AutSoft.DbScaffolding\AutSoft.DbScaffolding.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <None Remove="CodeTemplates\**\*.hbs" />
     <EmbeddedResource Include="CodeTemplates\**\*.hbs" />
   </ItemGroup>
-
 </Project>
